fix(template/scss): minor fixing footer stamps aspect ratio on mobile

--- a/@ecomplus/storefront-template/template/scss/components/_stamps.scss
+++ b/@ecomplus/storefront-template/template/scss/components/_stamps.scss
@@ -25,6 +25,7 @@
   }
 
   img {
+    width: auto;
     max-width: 100%;
     height: auto;
     max-height: 70px;
